--- a/README.rdoc
+++ b/README.rdoc
@@ -6,38 +6,43 @@
 
 == Welcome
 
-Ah, she will snare you. Here svelt lines, here 
-
+Ah, she will snare you. Her svelt lines, her 
 Rebecca harnesses the powers of the Shomen standard documentation model,
-and built on a jQuery powerhouse.
+and is built on a jQuery powerhouse, to deliver a sleek and highly usable
+documentation browser.
 
 
 == Features
 
-* Update a single portable file to update documentation.
-* Site disc footprint is extra small thanks to CDNs.
-* Personalize site design to best fit your project.
-* Test drive other's customizations with your own remote docs!
+* Dropdown search ribbon makes it a snap locate documents, classes and methods.
+* Built on JQuery, JQuery Templates and other well supported Javascript tools.
+* Easily personalize design to best fit your project.
 
 
 == How To
 
-Simple as pie. Clone this repo to your project's webite directory
-(or `gh-pages` branch if you are crazy like that).
+Generate a shomen `.json` file for you project to replace.
+
+  $ cd ..
+  $ shomen rdoc > site/foo-1.0.0.json
+
+See Shomen project to learn more about this.
+
+To locally view your documentation, clone this repo to your project's
+webite directory (or `gh-pages` branch if you are crazy like that).
 
   $ cd myproject
   $ git clone http://rubyworks.github.com/rebecca.git site
   $ cd site
   $ rm -rf .git
 
-Generate the shomen `doc.json` file for you project to replace
-the example file (see Shomen project for more about this).
+By default it will look for `doc.json` so you can link that to 
+the latest documentation file.
 
-  $ cd ..
-  $ shomen rdoc > site/doc.json
+  $ ln -s foo-1.0.0.json doc.json
 
 Now fire up local directory webserver. The `shomen` command provides
-one (must have sinatra installed):
+one (must have `sinatra` installed):
 
   $ shomen server
 
@@ -47,6 +52,22 @@ ajax calls (Firefox works. Chrome? Not so much).
   $ firefox index.html
 
 Now then, customize that template to your little hearts desire!
+
+To view you documentation remotely, firs publish you Shomen .json
+file, presumably to your website, but it can be anywhere on the
+internet that will accept loading via ajax.
+
+Now navigate over to the Rubyfaux site setting the `doc` property
+in the URL to the location of the file, e.g.
+
+  http://rubyworks.github.com/rebecca?doc=http://myorg.github.com/myapp/myapp-1.0.0.json
+
+And there you are.
+
+Note that if the documented project is large so too will be the Shomen `.json` file.
+In which case it take a moment for the browser to load the file. For large projects
+as such it is a good idea to divide documentation into a set of smaller files, rather 
+than one big file.
 
 
 == Legalease
